[FIX] footer overlaps body elemtns

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,12 +11,11 @@
   box-sizing: border-box;
 }
 
-html, body {
+ body {
   font-family: var(--font1);
   font-size: 16px;
-  height: 100%;
-  max-height: 100vh;
-  overflow-y: scroll;
+  position: relative;
+  min-height: 100%;
 }
 
 .container{
@@ -65,7 +64,6 @@ html, body {
 
 .plenty__hero {
   width: 100%;
-  height: 100%;
   text-align: center; 
 }
 
@@ -74,14 +72,15 @@ html, body {
 }
 
 .main{
-  min-height: 100vh;    
+  min-height: 100vh;
+  padding-bottom: 50px;
   background-color: var(--beige-coffee);
   margin: 0 auto;
-
 }
 
 .recipes__container {
-  padding: 1rem 0 2em 0; 
+  height: 100%;
+  padding-bottom: 140px; 
   justify-items: center;
 }
 
@@ -166,7 +165,6 @@ form ion-icon {
   font-weight: bold;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
   border-radius: 8px;
   max-width: 100%;
  }
@@ -186,12 +184,13 @@ form ion-icon {
   font-weight:500 ;
  }
 
- .footer {
-  position: fixed;
+ .footer {  
+  position: absolute;
   bottom: 0;
   width: 100%;
+  height: 140px;
+  line-height: 20px;
   background-color: var(--brown-coffee);
-  color: white;
   padding: 1rem;
 }
 
